[gd_scene load_steps=15 format=3 uid="uid://c2on6jae8ynix"]

[ext_resource type="Script" uid="uid://2i0hddkuq4tj" path="res://Areais/Batalha/scripts/simplesbatalha.gd" id="1_x2o57"]
[ext_resource type="Material" uid="uid://cgnunqt42nrdv" path="res://texture/folderTres/materials/BATALHA.tres" id="4_846df"]
[ext_resource type="Texture2D" uid="uid://dhso7bk8h4wuw" path="res://texture/paleta/Screenshot_30-600x600.png" id="5_hoeec"]
[ext_resource type="Script" uid="uid://dsslpkdcvssk1" path="res://Areais/Batalha/scripts/personagens.gd" id="6_jimw3"]
[ext_resource type="PackedScene" uid="uid://by72qrtpqld7j" path="res://Areais/Batalha/cenas/battle_arena.tscn" id="8_1y7vt"]
[ext_resource type="Texture2D" uid="uid://m506ayw5c1lv" path="res://texture/PNG/GUI.png" id="8_12ipo"]
[ext_resource type="StyleBox" uid="uid://ca1iiaaps77so" path="res://texture/folderTres/BoxTexture/intro.tres" id="12_3c0gs"]
[ext_resource type="PackedScene" uid="uid://c4i7d4j4sgiva" path="res://Areais/Batalha/cenas/ContainerPlayer.tscn" id="13_feg7f"]

[sub_resource type="Animation" id="Animation_nt1gt"]
resource_name = "E_panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, 469), Vector2(-16, 382)]
}

[sub_resource type="Animation" id="Animation_h7tth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 540)]
}

[sub_resource type="Animation" id="Animation_fq6de"]
resource_name = "S_panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, 382), Vector2(-16, 469)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_exe_atacar"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt1gt"]
_data = {
&"E_panel": SubResource("Animation_nt1gt"),
&"RESET": SubResource("Animation_h7tth"),
&"S_panel": SubResource("Animation_fq6de")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_12ipo"]
atlas = ExtResource("8_12ipo")
region = Rect2(128, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76unj"]
atlas = ExtResource("8_12ipo")
region = Rect2(64, 16, 64, 16)

[node name="Batalha2D" type="Node2D"]
script = ExtResource("1_x2o57")
metadata/_custom_type_script = "uid://2i0hddkuq4tj"

[node name="AnimationPanel" type="AnimationPlayer" parent="."]
root_node = NodePath("../BatalhaCanvas")
libraries = {
&"": SubResource("AnimationLibrary_nt1gt")
}

[node name="BatalhaCanvas" type="CanvasLayer" parent="."]
layer = 0
metadata/_edit_vertical_guides_ = [256.0]

[node name="FundoRect" type="TextureRect" parent="BatalhaCanvas"]
material = ExtResource("4_846df")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_hoeec")
expand_mode = 1

[node name="Personagens" type="Node2D" parent="BatalhaCanvas"]
scale = Vector2(4, 4)
script = ExtResource("6_jimw3")
metadata/_custom_type_script = "uid://dsslpkdcvssk1"

[node name="player1" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(64, 56)

[node name="player2" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(24, 32)

[node name="player3" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(24, 80)

[node name="inimigo1" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(224, 56)

[node name="inimigo2" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(264, 32)

[node name="inimigo3" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(264, 80)

[node name="Control" type="Control" parent="BatalhaCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BATTLE_ARENA" parent="BatalhaCanvas/Control" node_paths=PackedStringArray("batalha") instance=ExtResource("8_1y7vt")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 432.0
offset_top = 111.0
offset_right = 576.0
offset_bottom = 255.0
batalha = NodePath("../../..")

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control"]
z_index = 5
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_left = -16.0
offset_top = 540.0
offset_right = 1168.0
offset_bottom = 707.0007
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="BatalhaCanvas/Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("12_3c0gs")

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/Panel/MarginContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -2
alignment = 1

[node name="ContainerPlayer1" parent="BatalhaCanvas/Control/MarginContainer/Panel/MarginContainer/HBoxContainer" instance=ExtResource("13_feg7f")]
unique_name_in_owner = true
custom_minimum_size = Vector2(381, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="ContainerPlayer2" parent="BatalhaCanvas/Control/MarginContainer/Panel/MarginContainer/HBoxContainer" instance=ExtResource("13_feg7f")]
unique_name_in_owner = true
custom_minimum_size = Vector2(381, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="ContainerPlayer3" parent="BatalhaCanvas/Control/MarginContainer/Panel/MarginContainer/HBoxContainer" instance=ExtResource("13_feg7f")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(381, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="PointsProgressBar" type="TextureProgressBar" parent="BatalhaCanvas/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -15.999999
offset_right = 230.4
offset_bottom = 2.000001
scale = Vector2(5, 5)
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_right = 16
texture_under = SubResource("AtlasTexture_12ipo")
texture_progress = SubResource("AtlasTexture_76unj")
